tests/suite/fail/modules/helpers.ny
pub fn greet(name) {
    return "hi " + name
}

priv fn secret() {
    return 99
}
